--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "graphql": "^16.7.1",
     "react": "18.2.0",
     "react-native": "^0.72.1",
-    "react-native-dotenv": "^3.4.9"
+    "react-native-dotenv": "^3.4.9",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
