--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "^0.72.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.1"
+    "react-native-screens": "^3.22.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +30,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.0",
     "eslint": "^8.19.0",
