stop selection navigation and empty screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "typeRoots": [
       "./node_modules/@types",
-      "./types"
+      "src/common/types"
     ],
   },
   "extends": "@tsconfig/react-native/tsconfig.json"
